<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.register.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/as_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Forgot password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:text="@string/reset_password_hint"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/grey_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <EditText
        android:id="@+id/recovery_EmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/s_border_3"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/grey_900"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        android:autofillHints="emailAddress" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/s_shape_bg_1"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovery_EmailAddress">

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/recovery_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/grey_900"
        android:theme="@style/Theme.BooksOnlineSeller"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/recovaryEmail"
        android:textColor="@color/grey_800"
        android:textSize="15sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_mail_24"
        app:drawableTint="@color/ratingGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="Login now"
        android:textSize="16sp"
        android:textColor="@color/viewAll"
        android:drawablePadding="5dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_arrow_back_24"
        app:drawableTint="@color/viewAll" />

</androidx.constraintlayout.widget.ConstraintLayout>